grading/.temp/test02.log
clang++ -g3 -Wall -Wextra -std=c++11   -c -o test02.o test02.cpp
test02.cpp:10:11: error: no member named 'setNaasdlfjksa' in 'Student'
    nancy.setNaasdlfjksa;dme(name);
    ~~~~~ ^
test02.cpp:10:26: error: use of undeclared identifier 'dme'
    nancy.setNaasdlfjksa;dme(name);
                         ^
2 errors generated.
make: *** [test02.o] Error 1
